# SFMLGui

./: CMakeLists.txt
Realization/: CMakeLists.txt  gui_object.h  main.cpp
Realization/Button/: CMakeLists.txt  button.cpp  button.h
Realization/Label/: CMakeLists.txt  label.cpp  label.h
Realization/Window/: CMakeLists.txt  Window.cpp  Window.h
